test_src/compiler_errors/types/demotion/DemoteDoubleToInt.b
class DemoteDoubleToInt {
    void test() {
        Int value = 2.0;
        println(value);
    }
}
